Revert "fix editor overflow"
This reverts commit fd77d3ae772cc6282a77e2b2b6cbcd5ecb4348cb.

--- a/app/assets/stylesheets/components/editors.css.scss
+++ b/app/assets/stylesheets/components/editors.css.scss
@@ -1,6 +1,6 @@
 #editor {
   display: none;
-  overflow: auto;
+  overflow: scroll;
   max-height: 800px;
   max-width: 100%;
   height: 300px;
