--- a/app/assets/stylesheets/components/modals.css.scss
+++ b/app/assets/stylesheets/components/modals.css.scss
@@ -126,21 +126,11 @@
 
     .control-label {
       text-align: left;
-      padding: {
-        bottom: 7px;
-        left: 20px;
-      }
+      padding-left: 20px;
     }
 
     #editor-wrapper {
       margin-bottom: 0;
-    }
-
-    #editor {
-      border-left: none;
-      border-right: none;
-      border-top-style: dashed;
-      border-radius: 0;
     }
   }
 
